# nico-nix

./: Cargo.toml  README.md  devenv.nix
src/: cli.rs  config.rs  context.rs  error.rs  main.rs  repo.rs
src/dispatch/: completions.rs  init.rs  mod.rs  status.rs
src/templates/flake/: root.nix.template
templates/flake/: root.nix.template
