[package]
name = "nico"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bon = "3.8.1"
clap = { version = "4.5.53", features = ["cargo", "derive", "env", "string"] }
clap-verbosity-flag = { version = "3.0.4", features = ["serde"] }
clap_complete = "4.5.61"
colored = "3.0.0"
env_logger = { version = "0.11.8", features = ["kv"] }
git2 = { version = "0.20.3", features = ["https", "ssh", "vendored-openssl", "vendored-libgit2"] }
handlebars = "6.3.2"
include_directory = { version = "0.1.1", features = ["glob", "metadata"] }
inquire = "0.9.1"
log = { version = "0.4.29", features = ["serde", "kv", "kv_serde"] }
parking_lot = { version = "0.12.5", features = ["serde", "arc_lock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
shell-words = "1.1.1"
thiserror = "2.0.17"
